--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,9 @@
     "paths": {
       "@devgen-eureka-five/common/styles": [
         "libs/common/styles/src/index.ts"
+      ],
+      "@devgen-eureka-five/common/ui": [
+        "libs/common/ui/src/index.ts"
       ]
     }
   },
