--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,9 @@
       ],
       "@devgen-eureka-five/home": [
         "libs/home/src/index.ts"
+      ],
+      "@devgen-eureka-five/common/common-services": [
+        "libs/common/common-services/src/index.ts"
       ]
     }
   },
