Add code for angular-16.2.0 create-common-guards-lib.
[Url: razroo.com/community/angular-16.2.0/add-common-infrastructure/create-common-guards-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,9 @@
       ],
       "@devgen-eureka-five/common/common-services": [
         "libs/common/common-services/src/index.ts"
+      ],
+      "@devgen-eureka-five/common/common-guards": [
+        "libs/common/common-guards/src/index.ts"
       ]
     }
   },
