--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,9 @@
       ],
       "@devgen-eureka-five/common/common-guards": [
         "libs/common/common-guards/src/index.ts"
+      ],
+      "@devgen-eureka-five/data-access": [
+        "libs/data-access/src/index.ts"
       ]
     }
   },
