--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,6 +35,9 @@
       ],
       "@devgen-eureka-five/data-access": [
         "libs/data-access/src/index.ts"
+      ],
+      "@devgen-eureka-five/data-services": [
+        "libs/data-services/src/index.ts"
       ]
     }
   },
