Add code for angular-16.2.0 add-data-graphql-lib.
[Url: razroo.com/community/angular-16.2.0/data-access-infrastructure/add-data-graphql-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,6 +38,9 @@
       ],
       "@devgen-eureka-five/data-services": [
         "libs/data-services/src/index.ts"
+      ],
+      "@devgen-eureka-five/data-graphql": [
+        "libs/data-graphql/src/index.ts"
       ]
     }
   },
