Add code for angular-16.2.0 add-data-models-lib.
[Url: razroo.com/community/angular-16.2.0/data-access-infrastructure/add-data-models-lib]

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -41,6 +41,9 @@
       ],
       "@devgen-eureka-five/data-graphql": [
         "libs/data-graphql/src/index.ts"
+      ],
+      "@devgen-eureka-five/data-models": [
+        "libs/data-models/src/index.ts"
       ]
     }
   },
