--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -44,6 +44,9 @@
       ],
       "@devgen-eureka-five/data-models": [
         "libs/data-models/src/index.ts"
+      ],
+      "@devgen-eureka-five/common/common-environment": [
+        "libs/common/common-environment/src/index.ts"
       ]
     }
   },
